--- a/src/views/chat/MessagePane/messagePane.css
+++ b/src/views/chat/MessagePane/messagePane.css
@@ -1,12 +1,13 @@
-.messagelist {
+.messagepane {
   min-height: 40rem;
+  max-height: 40rem;
   margin: 0 2rem;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
 }
 
-.messagelist__info {
+.messagepane__info {
   height: 7rem;
   display: flex;
   flex-direction: column;
@@ -14,37 +15,38 @@
   justify-content: center;
 }
 
-.messagelist__items {
-  padding: 1rem 0;
+.messagepane__items {
+  padding: 1rem 1rem 1rem 0;
   border-bottom: 2px solid green;
   flex-grow: 1;
+  overflow-y: auto;
 }
 
-.messagelist__item {
+.messagepane__item {
   padding: 1rem 0;
 }
 
-.messagelist__item--self {
+.messagepane__item--self {
   text-align: right;
   margin-left: 6rem;
 }
 
-.messagelist__item--unself {
+.messagepane__item--unself {
   text-align: left;
   margin-right: 6rem;
 }
 
-.messagelist__input {
+.messagepane__input {
   padding: 1.5rem 0;
   text-align: right;
 }
 
-.messagelist__text {
+.messagepane__text {
   width: 100%;
   margin-top: 1rem;
   margin-bottom: 0;
 }
 
-.messagelist__text:first-child {
+.messagepane__text:first-child {
   margin-top: 0;
 }
