--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -3,18 +3,23 @@
   background-color: green;
   height: 8rem;
   color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .header__inner {
-  width: 75rem;
+  min-width: 75rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  margin: auto;
+  height: 100%;
 }
 
 .header__inner-links {
+  height: 100%;
   display: flex;
-  justify-content: flex-end;
+  align-items: flex-end;
+  padding-bottom: 4rem;
 }
 
 .header__inner-links a {
