--- a/src/views/chat/ThreadPane/threadPane.css
+++ b/src/views/chat/ThreadPane/threadPane.css
@@ -8,7 +8,7 @@
   padding: 1rem;
   margin: 2rem 0;
   display: inline-block;
-  border: none;
+  border: 1px solid black;
   border-radius: 0.5rem;
   text-decoration: none;
   background: green;
