--- a/src/views/chat/MessagePane/messagePane.css
+++ b/src/views/chat/MessagePane/messagePane.css
@@ -1,7 +1,7 @@
 .messagepane {
   min-height: 40rem;
   max-height: 40rem;
-  margin: 0 2rem;
+  margin: 0 0 0 2rem;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
